fixed button size on mobile

--- a/modules/buttons.scss
+++ b/modules/buttons.scss
@@ -29,6 +29,7 @@
 
 		@include mixins.phone {
 			margin: 6px 0;
+			width: 100%;
 		}
 	}
 
