--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ nav {
 @media only screen and (max-width: 576px) {
   .btn--blue {
     margin: 6px 0;
+    width: 100%;
   }
 }
 .btn--blue:hover {
